assets/style.css
html {
	padding: 0px;
	margin: 0px;
    height: 100%;
}
html * {
	box-sizing: border-box;
}
body {
	background: #FFFFFF;
	padding: 0px;
	margin: 0px;
	font-family: OpenSans-Light;
	font-family: Calibri;
	font-size: 18px;
    height: 100%;
}

@font-face {
	font-family: "OpenSans-Light";
	src: url("fonts/OpenSans/OpenSans-Light.ttf");
}

a {color: #E9E581; }
a:hover		{color: #DE1B1B; }
a:visited:hover	{color: #9E342C;}
a:active	{color: #9E342C; }

a.nolink				{color: #000000; text-decoration: none;}
a.nolink:visited		{color: #000000; text-decoration: none;}
a.nolink:hover			{color: #000000; text-decoration: none;}
a.nolink:visited:hover	{color: #000000; text-decoration: none;}
a.nolink:active			{color: #000000; text-decoration: none;}

table.layout {
	border-collapse: collapse;
}
table.vtop td,
table.vtop th {
	vertical-align: top;
}

.fullsize {
	width: 100%;
	height: 100%;
}
.fullwidth {
	width: 100%;
}

.titleBlock {
	background-color: rgba(0, 0, 0, 1);
	background-attachment: fixed;
	background-position: center top;
	background-repeat: no-repeat;
	background-size: cover;
	background-blend-mode: color-burn;
	color: #FFFFFF;
	text-shadow: 2px 2px 2px rgba(0, 0, 0, 1.0);
	text-align: center;
	font-size: 1.25rem;
	height: 90%;
	transition-property: background-image, background-color;
	transition-duration: 1s;
	transition-delay: 2s;
	transition-timing-function: linear;
}
.siteFrame {
	background: #F6F6F6;
	color: #2B2B2B;
	text-align: center;
}
.siteFrame h1 {
	color: #E9E581;
	text-shadow: 2px 2px 2px rgba(0,0,0,0.25);
}
.block1 {
	background-color: #FFFFFF;
	padding: 1px;
}
.block2 {
	background-color: #DFDFDF;
	padding: 1px;
}
.footerBlock {
	background: #4E4E59;
	color: #B2B4B8;
	text-align: center;
	padding-top: 64px;
	padding-bottom: 64px;
	font-size: 1.25rem;
}

.spacedSet {}
.spacedSet > * {
	margin-top: 0px;
	margin-bottom: 64px;
}
.spacedSet > *:first-child {
	margin-top: 15px;
}

.project {
	display: inline-block;
	/*border: solid 1px #DFDFDF;*/
	background: #EFEFEF;
	/*box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.25);*/
	color: #3F3F3F;
	width: 1000px;
	height: 250px;
	text-align: left;
}
.project .description {
	display: inline-block;
	padding: 12px;
	float: left;
	width: 40%;
	height: 100%;
	overflow-y: auto;
}
.project .description > *:first-child {
	margin-top: 0px;
}
.project .description > *:last-child {
	margin-bottom: 0px;
}
.project .description > p {
	font-size: 1.0rem;
}
.project .image {
	display: inline-block;
	background-color: #000000;
	background-repeat: no-repeat;
	background-position: center center;
	background-size: contain;
	float: right;
	width: 60%;
	height: 100%;
}

.o-tabs {
    margin: auto;
    display: inline-block;
    text-align: center;
}

.o-logo {
    height: 20%;
    display:inline-block;
    border-radius: 15%;
}

.nav-pills > li > a { color: #2B2B2B; text-decoration: bold; }

.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
    color: #F6F6F6;
    background-color: #DE1B1B;
    border-radius: 1px;
    
}

.o-tabs > a {
    font-size: 22px;
    text-decoration: none;
    color: #2B2B2B;
}

.o-title {
    font-size: 72px;
}

.o-panel {
    background-color: #2B2B2B;
    color: #F6F6F6;
    margin-bottom:20px;
    border: 1px solid transparent;
    border-radius: 4px;
    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
}

.o-tagline {
    margin-bottom: 20px
}

.o-title-wrapper {
    margin-left: 1%;
    display: inline-block;
    vertical-align: middle;
}

.o-textbox {
    width:40%;
    text-align: left;
    margin-left: auto;
    margin-right: auto;
}

.o-demoLink img {
    height: 100%;
    width: 100%;
    margin-left: 5px;
    transition: all 1s ease;
}
.o-demoList:hover {
    height: 42%;
    
}

.o-demoList {
    width: 30.5%;
    height:40%;
    display: inline-block;
    vertical-align: middle;
    border: 0;
    overflow: hidden;
    transition: all 1s ease;
}

.o-demoLink span{
    position:absolute;
    color:transparent;
    
    background: transparent;
    text-align: center;
    transition: all 1s ease;
    margin-left:5px;
    margin-top: 0;
    height: 40%;
    width:30.5%;
    
}
.o-demoLink:hover span{
    color:white;
    background:rgba(0,0,0,0.7);
    z-index:1;
    
    height:42%;
}

.o-roster {
    width:40%;
    display: inline-block;
    
}
.o-peeps{
    height: 39.4%;
    width: 35.2%;
    overflow: hidden;
    background-position: center;
    background-size: cover;
    margin-bottom: 7%;
    border-radius: 15px;
    
}
.o-peeps span {
    position: absolute;
    margin-left: 8%;
    width: 20%;
}

.o-sandLink {
    height: 15%;
    position: absolute;
    right: 0%;
    top: 3%;
}

